# ATProbe

./: .gitignore  README.md  pyproject.toml
.agents/skills/atprobe-case-author/: SKILL.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: README.md
docs/at-ref/: README.md  ch01-总体介绍.md  ch02-开机LOG使用说明.md  ch03-AT命令格式说明.md  ch04-通用AT指令.md  ch05-短消息服务指令.md  ch06-TCP-UDP客户端指令.md  ch07-TCP服务器指令.md  ch08-TCP-UDP透传指令.md  ch09-TCP透明传输服务器指令.md  ch10-FTP指令.md  ch11-HTTP-HTTPS指令.md  ch12-呼叫控制指令.md  ch13-Wi-Fi功能.md  ch14-SSL TCP数据业务.md  ch15-阿里MQTT指令.md  ch16-标准MQTT指令.md  ch17-AWS MQTT指令.md  ch18-GPS功能.md  ch19-BT-BLE通用基础AT指令.md  ch20-BLE功能通用指令.md  ch21-BLE外围设备(从机).md  ch22-BLE中心设备(主机).md  ch23-DTMF功能指令.md  ch24-基站定位.md  ch25-网络时间同步.md  ch26-网络共享.md  ch27-流量统计.md  ch28-文件系统操作.md  ch29-录音功能相关指令.md  ch30-SIM卡操作相关指令.md  ch31-其他指令.md  ch32-UDP服务器功能.md  ch33-管道云功能.md  附录D-ErrorCodes.md  附录E-ATV设置及回码.md  附录F-SupportBandList.md  附录G-结果码.md  附录H-错误码定义.md  附录I-URC命令.md
docs/design/: TSD-技术选型.md
docs/examples/: new-report-preview-empty.html  new-report-preview.html
docs/plan/: IMP-M2-用例定义修改方案.md  PRD-需求细化计划.md  SESSION-20260519-需求细化进度.md  SESSION-20260617-M2审查与修订进度.md  implementation-status.md
docs/requirements/: PRD-总体需求.md  REQ-M1-串口通信管理.md  REQ-M2-测试用例定义.md  REQ-M3-测试执行引擎.md  REQ-M4-测试报告.md  REQ-M5-CLI界面.md  REQ-M6-UI管理界面.md  REQ-M7-测试环境配置.md
docs/review/: REV-M2-审查报告.md
docs/superpowers/plans/: 2026-06-27-manual-debug-command-library.md  2026-06-27-manual-debug-file-send.md  2026-06-29-packaging-and-distribution.md  2026-06-29-remote-update.md  2026-06-30-testcase-naming-and-structure.md  2026-07-01-tool-implementation-gaps.md
docs/superpowers/specs/: 2026-06-27-manual-debug-command-library-design.md  2026-06-27-manual-debug-file-send-design.md  (+4 more)
examples/: atprobe-com0com.yaml  atprobe-com5.yaml  atprobe.yaml  env.yaml  quick_commands.yaml
packaging/: README.txt  atprobe.spec  atprobe.yaml.template  build.py  entry_cli.py  entry_gui.py
packaging/hooks/: hook-atprobe.py
src/atprobe/: __init__.py  __main__.py
src/atprobe/cli/: __init__.py  (+1 more)
tests/: conftest.py
tests/integration/: test_cli.py  test_engine.py  test_gui.py  test_reporting.py
tests/unit/: test_aggregator.py  test_cli_update.py  test_envconfig.py  test_evaluator.py  test_extractor.py  test_file_send_worker.py  test_mainwindow_env_fallback.py  test_models.py  test_persistent_subscribe.py  test_quickcmd_models.py  test_quickcmd_store.py  test_runtime_resources.py  test_store_builtin_path.py  test_suite_models.py  test_templater.py  test_text_render.py  test_update_checker.py  test_update_config.py  test_update_downloader.py  test_update_installer.py  test_version.py  test_version_consistency.py  test_write_bytes.py  test_write_command_terminator.py
tools/: __init__.py  build_at_ref.py  e2e_com5.py
tools/vsim/: README.md  __init__.py  at_responder.py  selftest.py
(+126 files in other folders)
